objects/vlocity_ins_fsc__InsurancePolicyTermTrackingEntry__c.object
<CustomObject>
    <description>Policy Terms Tracking Entry object represents credits and debits that have been made against a Policy Financial Term, typically updated when Claim Payments are made against a specific Policy Financial Term (e.g. Limits, Deductibles). Used in determining the current standing of a given Policy Financial Term at a given point in time. Master-detail chid object of the Policy Terms.</description>
    <fields>
        <fullName>vlocity_ins_fsc__CalculatedInitialAmount__c</fullName>
        <label>Calculated Initial Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__CalculatedInitialValue__c</fullName>
        <label>Calculated Initial Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__ClaimCoverageId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Coverage</label>
        <referenceTo>ClaimCoverage</referenceTo>
        <relationshipLabel>Policy Terms Tracking Entry</relationshipLabel>
        <relationshipName>InsPolicyTermTrackingEntryCoverages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__ClaimCoveragePaymentDetailId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Coverage Payment Detail</label>
        <referenceTo>ClaimCoveragePaymentDetail</referenceTo>
        <relationshipLabel>Policy Terms Tracking Entry</relationshipLabel>
        <relationshipName>InsPolicyTermTrackingEntryPaymentDtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__ClaimId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>Claim</referenceTo>
        <relationshipLabel>Policy Terms Tracking Entry</relationshipLabel>
        <relationshipName>InsPolicyTermTrackingEntryClaims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__ClaimItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Item</label>
        <referenceTo>ClaimItem</referenceTo>
        <relationshipLabel>Policy Terms Tracking Entry</relationshipLabel>
        <relationshipName>InsPolicyTermTrackingEntryClaimItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__InitialAmount__c</fullName>
        <label>Initial Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__InitialValue__c</fullName>
        <label>Initial Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__InsurancePolicyParticipantId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Policy Participant</label>
        <referenceTo>InsurancePolicyParticipant</referenceTo>
        <relationshipLabel>Policy Terms Tracking Entry</relationshipLabel>
        <relationshipName>InsPolicyTermTrackingEntryParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__InsurancePolicyTermId__c</fullName>
        <label>Policy Term</label>
        <referenceTo>vlocity_ins_fsc__InsurancePolicyTerm__c</referenceTo>
        <relationshipLabel>Policy Terms Tracking Entry</relationshipLabel>
        <relationshipName>InsPolicyTermTrackingEntryTerm</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__InsuredPolicyAssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insured Policy Asset</label>
        <referenceTo>InsurancePolicyAsset</referenceTo>
        <relationshipLabel>Policy Terms Tracking Entry</relationshipLabel>
        <relationshipName>InsPolicyTermTrackingEntryPolicyAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__PostedAmount__c</fullName>
        <label>Posted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__PostedValue__c</fullName>
        <label>Posted Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__RemainingAmount__c</fullName>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__RemainingValue__c</fullName>
        <label>Remaining Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__Sequence__c</fullName>
        <label>Numerical Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Insurance Policy Terms Tracking Entry</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Policy Term Tracking Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>